add reset function

--- a/wod.html
+++ b/wod.html
@@ -99,6 +99,9 @@
   <button id="pause">
     Pause (works ONCE only!)
   </button>
+  <button class="hidden" id="restart">
+    Go again?
+  </button>
 </div>
 
 <div id="credit-container">
